# Utopia.G

./: .editorconfig  .gitignore  .gitmodules  .licenseheader  AutoUpdateAssemblyName.txt  GitVersion.yml  LICENSE  Utopia.G.sln  Utopia.sln  Utopia.sln.licenseheader  build.ps1  build.sh  commit.csx  definition.targets  dependencies.targets  docfx.json  global.json  share.cmake  utopia.xml  utopia.xsd  version.md  version.txt
.config/: dotnet-tools.json
.nuke/: build.schema.json  parameters.json
Utopia.Analyzer/: GenerateDocs.cs  Program.cs  TranslateFinder.cs  Utility.cs  Utopia.Analyzer.csproj
Utopia.Benchmark/: DictionaryBenchmark.cs  GuuidBenchmark.cs  Program.cs  Utility.cs  Utopia.Benchmark.csproj
Utopia.Build/: GeneratePluginSourceTask.cs  RunUtopiaToolTask.cs  Utopia.Build.csproj
Utopia.BuildScript/: Build.cs  Configuration.cs  INativeBuild.cs  Utilities.cs  Utopia.BuildScript.csproj
Utopia.Core/: ContainerUtilities.cs  Event.cs  EventManager.cs  EventVariable.cs  FileSystem.cs  Guuid.cs  IEntity.cs  IEvent.cs  IEventBus.cs  IEventManager.cs  IEventVariable.cs  IFileSystem.cs  IPluginBase.cs  IPluginInformation.cs  IPluginLoader.cs  ISafeDictionary.cs  ISaveable.cs  IServiceChangedEvent.cs  IServiceProvider.cs  ISynchronizable.cs  LifeCycle.cs  Log.cs  PluginLoader.cs  Position.cs  SafeDictionary.cs  SafeList.cs  ServiceChangedEvent.cs  ServiceProvider.cs  SynchronizedGuard.cs  Xml.cs  (+3 more)
Utopia.FastNoise/: .gitignore  CMakeLists.txt  FastNoise2.cs  INoiseGenerator.cs  NoiseTest.cs  SimplexGenerator.cs  Utopia.FastNoise.csproj
Utopia.Kcp/: CMakeLists.txt
(+363 files in other folders)
